[package]
name = "nanostat"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2018"

[features]
default = []
cli = ["argh", "plotlib"]

[dependencies]
argh = { version = "0.1", optional = true }
plotlib = { version = "0.5", optional = true }
statrs = "0.14"

[dev-dependencies]
approx = "0.4"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false

[[bin]]
name = "nanostat"
required-features = ["cli"]