[package]
name = "nanostat"
version = "0.2.1-alpha.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "nanostat compares data sets using Welch's t-test at various levels of confidence."
homepage = "https://github.com/codahale/nanostat"
documentation = "https://docs.rs/nanostat/"
keywords = ["statistics"]
readme = "README.md"
include = ["benches/**/*.rs", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[features]
default = []
cli = ["clap", "plotlib"]

[dependencies]
clap = { version = "3.2.14", optional = true, features = ["derive"] }
plotlib = { version = "0.5.1", optional = true }
statrs = "0.15.0"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.3.6", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false

[[bin]]
name = "nanostat"
required-features = ["cli"]
